# test-maths-package

./: .gitignore  pyproject.toml
src/test_maths_package/: calculator.py
tests/: test_calculator.py
